--- a/references.bib
+++ b/references.bib
@@ -439,6 +439,31 @@ ISSN={1050-4729 },}
 	address = {Orlando, FL, USA}
 	}
 
+@inproceedings{Morisawa07icra,
+author={M. Morisawa and K. Harada and S. Kajita and S. Nakaoka and
+                  K. Fujiwara and F. Kanehiro and K. Kaneko and
+                  H. Hirukawa},
+booktitle=ICRA,
+title={Experimentation of Humanoid Walking
+                  Allowing Immediate Modification of Foot Place Based
+                  on Analytical Solution},
+year={2007},
+month={april},
+volume={},
+number={},
+pages={3989 -3994},
+keywords={HRP-2 humanoid robot;center of gravity;foot placement
+                  modification;gait planning;inverted pendulum
+                  model;polynomials;trajectory
+                  parameterization;walking pattern generator;walking
+                  robot;zero-moment point;humanoid robots;legged
+                  locomotion;nonlinear control systems;path
+                  planning;poles and zeros;polynomials;position
+                  control;stability;},
+doi={10.1109/ROBOT.2007.364091},
+ISSN={1050-4729},}
+
+
 @article{Mouragnon09ivc,
  author = {E. Mouragnon and M. Lhuillier and M. Dhome and F. Dekeyser and P. Sayd},
  title = {\href{http://www.sciencedirect.com/science/article/pii/S0262885608002436}{Generic and Real-Time Structure from Motion using Local Bundle Adjustment}},
