--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -1,29 +1,25 @@
 \section{Introduction}~\label{sec:introduction}
 
-In this paper, we consider the problem of real-time realiable
+In this paper, we consider the problem of real-time reliable
 trajectory execution for humanoid robots. A precise localization on a
 humanoid robot is both crucial to achieve reliable trajectory
 execution and challenging due to humanoid robots specific features. We
 propose a novel control architecture for humanoid robots where the
-current localization of the robot is used by the robot controller and
-planner trajectory.
-
-The objective of this work is to localize the humanoid robot
+current localization is used by the robot controller and planner
+trajectory. The objective of this work is to localize the humanoid robot
 HRP-2~\cite{Kaneko04icra} while it is navigating through an indoor
-environment. We will show in this paper that precise localization on a
-humanoid robot is both crucial to achieve reliable trajectory
-execution and challenging due to humanoid robots specific features.
+environment.
 
 Firstly, localization is crucial on a humanoid robot as its position
-cannot be controlled directly. Legs motion must be planned, which
-makes the assumption that all contacts will be perfect (i.e.\ no
-friction) during the movement. This is not the case in practice and
-leads to execution errors which cannot be ignored. Moreover, reactive
-control algorithms relies on the \textit{Linear Inverted Pendulum}
-model which produces rough trajectories~\cite{Kajita01iros}. This
-increases the gap between the generated motion and the executed
-one. Therefore, a reliable localization algorithm is important to
-allow reliable trajectory execution.
+cannot be controlled directly. Legs motion are planned under the
+assumption that all contacts will be perfect (i.e.\ no friction)
+during the movement. This is not the case in practice and leads to
+execution errors which cannot be ignored. Moreover, reactive control
+algorithms relies on simplified dynamics models such as the
+\textit{Linear Inverted Pendulum} model~\cite{Kajita01iros}. These
+imply a gap between the generated motion and the executed
+one. Therefore, localization is necessary to ensure a consistent robot
+behavior.
 
 Secondly, localization on a humanoid robot is challenging. Mobile
 robots odometry can be computed using wheel encoders and give a
@@ -33,7 +29,7 @@ the case on a legged robot on which 3D localization is required and
 where no encoder based reliable odometry exists~\citep{Hornung10iros}.
 
 Both of these reasons makes localization a cornerstone of reliable
-trajectory execution on humanoid robots. For obtaining an accurate
+trajectory execution on humanoid robots. To obtain an accurate
 localization of the robot in the environment, we employ fast
 vision-based localization techniques~\cite{Alcantarilla10icra} that
 assume a prior 3D map of the environment. These techniques perform
@@ -45,13 +41,12 @@ Localization and Mapping~(SLAM)~\cite{Davison07pami,Konolige08tro}
 techniques.
 
 In this article, the past results in vision processing on humanoids
-robots are presented in \ref{sec:related}. The section
-\ref{sec:architecture} is an overview of the robotics framework is
-provided to understand how the vision is linked to the robot
-controller. The vision based localization algorithm is described in
-detail in \ref{sec:vision}. A discussion of the experimental results
-and a comparisong toward motion capture data is presented in
-\ref{sec:results} and to finish the project roadmap is described in
+robots are presented in \ref{sec:related}. Section
+\ref{sec:architecture} details how the vision is linked to the robot
+controller via our proposed control scheme. The vision based
+localization algorithm is described in detail in \ref{sec:vision}. The
+experimental results are discussed and compared to motion capture data
+in \ref{sec:results}. To finish the project roadmap is described in
 \ref{sec:conclusions}.
 
 \begin{figure}[ht]
@@ -65,5 +60,5 @@ and a comparisong toward motion capture data is presented in
 
 %%% Local Variables:
 %%% ispell-local-dictionary: "american"
-%%% LocalWords:  odometry HRP
+%%% LocalWords:  odometry HRP roadmap
 %%% End:
