--- a/src/related_work.tex
+++ b/src/related_work.tex
@@ -32,9 +32,12 @@ robot center of mass velocity on a 2d plane and get rid of most of the
 complexity of the walking process. This approach is extremely
 interesting, but unfortunately do not take into account obstacles in
 the environment. Also, this algorithm is not suited to trajectory
-tracking which is our objective.
+tracking which is our objective. \cite{Harada04humanoids,
+  Morisawa07icra} aim at allowing sudden changes in the robot
+trajectory. Again, the objectives pursued by these work and our work
+differ as they alter the initial plan to react to environment changes.
 
-~\citet{Davison07pami} showed succesful monocular SLAM results for
+~\citet{Davison07pami} showed successful monocular SLAM results for
 small indoor environments using the HRP-2 robot. This approach, known
 as \textit{MonoSLAM}, is a monocular Extended Kalman Filter (EKF)
 vision-based system, that allows to build a small map of sparse 3D
@@ -61,5 +64,6 @@ prediction~\cite{Alcantarilla10icra,Alcantarilla11icra}.
 
 %%% Local Variables:
 %%% ispell-local-dictionary: "american"
-%%% LocalWords:  odometry HRP
+%%% LocalWords:  odometry HRP servoing replanning Nao MonoSLAM Kalman EKF al
+%%% LocalWords:  Ozawa linearization
 %%% End:
