Fix some grammar mistakes.

--- a/rss12humanoids.tex
+++ b/rss12humanoids.tex
@@ -87,12 +87,12 @@
 \begin{abstract}
 
   Reliable localization on a humanoid robot is a \textit{sine qua non}
-  condition to succeed in realizing complex robotics scenarii. Before
+  condition to succeed in realizing complex robotics scenarios. Before
   dealing with perturbations and online modification of the
   environment, one has to make sure that the planned trajectory alone
   will be correctly followed. This paper demonstrates that a control
-  framework suited to humanoid robots integrated reliying on a vision
-  based localization system can achieve this goal. By compensating for
+  framework suited to humanoid robots relying on a vision based
+  localization system can achieve this goal. By compensating for
   execution errors such as drifts and robot model errors, the HRP-2
   robot is able to achieve high precision tasks.
 
