--- a/src/xp_results.tex
+++ b/src/xp_results.tex
@@ -33,10 +33,10 @@ accomplished.
 
 The camera trajectory estimated by the localization algorithm is
 validated using motion capture data. Markers have been placed on both
-the robot head to provide ground truth.
+the robot head (FIXME and left foot?) to provide ground truth.
 
 
-To finish, the camera position is given by the algorithm described in
+Finally, the camera position is given by the algorithm described in
 detail in the previous sections. During the experiments, the acquired
 image resolution was $320 \times 240$. The localization module has
 been running at a mean rate of 16\hertz~during the experiments. The
@@ -58,7 +58,7 @@ incorporate enough texture to detect enough interest points.
 
 The used motion capture system is a Motion Analysis system relying on
 six Eagles and four Hawks cameras. It provides an estimation of the
-camera position at 200\hertz~with a precision error less than one
+camera position at 200\hertz~with a precision error of less than one
 centimeter.
 
 %FIXME write conclusion -> summarize results.
