--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -10,32 +10,32 @@ trajectory. The objective of this work is to localize the humanoid robot
 HRP-2~\cite{Kaneko04icra} while it is navigating through an indoor
 environment.
 
-Firstly, localization is crucial on a humanoid robot as its position
+First, localization is crucial on a humanoid robot as its position
 cannot be controlled directly. Legs motion are planned under the
 assumption that all contacts will be perfect (i.e.\ no friction)
 during the movement. This is not the case in practice and leads to
 execution errors which cannot be ignored. Moreover, reactive control
-algorithms relies on simplified dynamics models such as the
+algorithms rely on simplified dynamics models such as the
 \textit{Linear Inverted Pendulum} model~\cite{Kajita01iros}. These
 imply a gap between the generated motion and the executed
 one. Therefore, localization is necessary to ensure a consistent robot
 behavior.
 
-Secondly, localization on a humanoid robot is challenging. Mobile
+Second, localization on a humanoid robot is challenging. Mobile
 robots odometry can be computed using wheel encoders and give a
 reasonable hint on the current robot motion. 2D maps can also be used
 to simplify the navigation through indoor environments. This is not
 the case on a legged robot on which 3D localization is required and
 where no encoder based reliable odometry exists~\citep{Hornung10iros}.
 
-Both of these reasons makes localization a cornerstone of reliable
+Both of these reasons make localization a cornerstone of reliable
 trajectory execution on humanoid robots. To obtain an accurate
 localization of the robot in the environment, we employ fast
 vision-based localization techniques~\cite{Alcantarilla10icra} that
 assume a prior 3D map of the environment. These techniques perform
 \textit{visibility prediction}~\cite{Alcantarilla11icra}, that allows
 to perform a fast and robust data association between a large map of
-3D points and perceived 2D features in the image. We firstly build a
+3D points and perceived 2D features in the image. We first build a
 3D map of the environment by means of stereo visual Simultaneous
 Localization and Mapping~(SLAM)~\cite{Davison07pami,Konolige08tro}
 techniques.
@@ -43,10 +43,10 @@ techniques.
 In this article, the past results in vision processing on humanoids
 robots are presented in \ref{sec:related}. Section
 \ref{sec:architecture} details how the vision is linked to the robot
-controller via our proposed control scheme. The vision based
+controller via our proposed control scheme. The vision-based
 localization algorithm is described in detail in \ref{sec:vision}. The
 experimental results are discussed and compared to motion capture data
-in \ref{sec:results}. To finish the project roadmap is described in
+in \ref{sec:results}. Finally the project roadmap is described in
 \ref{sec:conclusions}.
 
 \begin{figure}[ht]
