--- a/src/vision.tex
+++ b/src/vision.tex
@@ -1,15 +1,15 @@
 
 \section{Vision Processing}\label{sec:vision}
-In this section, we will describe the main components of our vision processing. Our computer vision module comprises of two different stages: First, a stereo visual SLAM module for building a persistent 3D map of the environment and second a vision-based localization framework with visibility prediction that assumes that a prior 3D map of the environment is given. 
+In this section, we will describe the main components of our vision processing. Our computer vision module comprises two different stages: first, a stereo visual SLAM module for building a persistent 3D map of the environment and second a vision-based localization framework with visibility prediction that assumes that a prior 3D map of the environment is given. 
 
-We use the two cameras that are attached to the ears of the HRP-2 robot. These two cameras have a baseline of approximately 14.4~cm and an horizontal field of view of $90^{\circ}$ for each of the cameras. Prior to any SLAM or localization processing, the stereo rig is calibrated in an offline setup obtaining the intrinsics parameters of each of the cameras and the extrinsics parameters that represent the rigid transformation (translation, rotation) between the two cameras. Once we have obtained the intrinsics and extrinsics of the stereo rig, we can correct the distortion of the images and perform stereo rectification. Stereo rectification simplifies considerably the stereo correspondences problem and allows to compute dense disparity maps.
+We use the two cameras that are attached to the ears of the HRP-2 robot. These two cameras have a baseline of approximately 14.4~cm and an horizontal field of view of $90^{\circ}$ for each of the cameras. Prior to any SLAM or localization processing, the stereo rig is calibrated in an offline setup obtaining the intrinsics parameters of each of the cameras and the extrinsics parameters that represent the rigid transformation (translation, rotation) between the two cameras. Once we have obtained the intrinsics and extrinsics of the stereo rig, we can correct the distortion of the images and perform stereo rectification. Stereo rectification simplifies considerably the stereo correspondences problem and allows computing dense disparity maps.
 
 \subsection{Stereo Visual SLAM}\label{sec:vslam}
 Our stereo visual SLAM system combines accurate relative camera pose estimation by means of visual odometry~\cite{Kaess09icra} and a hierarchical optimization of the motion and the structure by means of
 local bundle adjustment~\cite{Mouragnon09ivc}.
 
 \subsubsection{Stereo Visual Odometry}\label{sec:visual_odometry}
-We estimate the relative camera motion between consecutive frames by matching the set of correspondences between two frames. The set of 2D features are detected by means of the well-known Harris corner detector~\cite{Harris88avc} at the original image resolution. We detect features only for the left image of the stereo pair. Then, we find the correspondences of the 2D features in the right image by
+We estimate the relative camera motion between consecutive frames by matching the set of correspondences between two frames. The set of 2D features is detected by means of the well-known Harris corner detector~\cite{Harris88avc} at the original image resolution. We detect features only for the left image of the stereo pair. Then, we find the correspondences of the 2D features in the right image by
 accessing the disparity map. At the end, what we have is a set of stereo features
 $\mathcal{F}_{t}=\left\{\left(u_{L},u_{R},v\right)_{i}\right\}$, where $\left(u_{L},v\right)$ is the location of the feature in the left image and $\left(u_{R},v\right)$ is the corresponding location in the
 right image. In addition, we also store for each stereo feature $\mathcal{F}_{t}$ the coordinates of the i-th reconstructed 3D point $h_{i,t}=\left(x \ y \ z\right)^{t}$ with respect to the camera
@@ -17,20 +17,20 @@ coordinate frame at that time instant $t$.
 
 For each detected 2D feature in the left image we also extract a descriptor vector that encodes its appearance information. Similar to Speeded Up Robust Features (SURF)~\cite{Bay08cviu}, for a detected
 feature at a certain scale, we compute a unitary descriptor vector of dimension $16$ in order to speed up the descriptor computation. We use the upright version of the descriptors (no invariance to rotation)
-since upright descriptors perform better in scenarios where the camera only rotates around its vertical axis, which is often the case of humanoid robots and are also faster to compute than its rotation invariant counterpart.
+since upright descriptors perform better in scenarios where the camera only rotates around its vertical axis, which is often the case for humanoid robots, and are also faster to compute than its rotation invariant counterpart.
 
-Once we have computed the descriptors, we find the set of putative matches between the stereo features from the current frame~$\mathcal{F}_{t}$ and the previous one~$\mathcal{F}_{t-1}$ by matching their associated list of descriptors vectors. After finding the set of putative matches between two consecutive frames we estimate the relative camera motion using a standard two-point algorithm in a Random Sample Consensus (RANSAC)~\cite{Bolles81ijcai} setting by minimizing the following cost function:
+Once we have computed the descriptors, we find the set of putative matches between the stereo features from the current frame~$\mathcal{F}_{t}$ and the previous one~$\mathcal{F}_{t-1}$ by matching their associated list of descriptors vectors. After finding the set of putative matches between two consecutive frames, we estimate the relative camera motion using a standard two-point algorithm in a Random Sample Consensus (RANSAC)~\cite{Bolles81ijcai} setting by minimizing the following cost function:
 %
 \begin{equation} \label{eq:three_pt}
 \argmin_{\textit{R}_{t-1}^{t},\mathbf{t}_{t-1}^{t}} \sum\limits_{i} \left\| z_{i,t} - \Pi\left(\textit{R}_{t-1}^{t},\mathbf{t}_{t-1}^{t},h_{i,t-1}\right)\right\|_{2}
 \end{equation}
 %
-where $z_{i,t}=\left\{\left(u_{L},u_{R},v\right)_{i}\right\}$ are the set of 2D measurements of a stereo feature at time t and $\Pi$ is a function that projects a 3D point $h_{i,t-1}$ (referenced to the camera coordinate frame at time $t-1$) to the image coordinate frame at time $t$. This projection function $\Pi$ involves a rotation $\textit{R}_{t-1}^{t}$ and a translation $\mathbf{t}_{t-1}^{t}$ of 3D
+where $z_{i,t}=\left\{\left(u_{L},u_{R},v\right)_{i}\right\}$ is the set of 2D measurements of a stereo feature at time t and $\Pi$ is a function that projects a 3D point $h_{i,t-1}$ (referenced to the camera coordinate frame at time $t-1$) to the image coordinate frame at time $t$. This projection function $\Pi$ involves a rotation $\textit{R}_{t-1}^{t}$ and a translation $\mathbf{t}_{t-1}^{t}$ of 3D
 points between both coordinate frames and a projection onto the image plane by means of the stereo rig calibration parameters. The resulting relative camera motion is transformed to a global coordinate frame
-(usually referenced to the first frame of the sequence) and then is used by the mapping management module. We use the Levenberg-Marquardt algorithm for all the nonlinear optimizations.
+(usually referenced to the first frame of the sequence) and is then used by the mapping management module. We use the Levenberg-Marquardt algorithm for all the nonlinear optimizations.
 
 \subsubsection{Bundle Adjustment}\label{sec:ba}
-When the accumulated motion in translation or rotation from the visual odometry module is higher than a fixed threshold (in our experiments $10~cm$ and $5^{\circ}$ respectively), we decide to create a new \textit{keyframe}. This keyframe, will be optimized later in a local bundle adjustment procedure. In the local bundle adjustment optimization, 3D points and camera poses are refined simultaneously through the sequence. Similar to~\cite{Mouragnon09ivc} we use a sliding window approach reducing the computational cost, optimizing only the last $n$ keyframes at each stage, accounting for the 2D reprojections in the last $N$ keyframes. Typical values for $\left(N,n\right)$ are $\left(10,3\right)$ respectively.
+When the accumulated motion in translation or rotation from the visual odometry module is higher than a fixed threshold (in our experiments $10~cm$ and $5^{\circ}$ respectively), we decide to create a new \textit{keyframe}. This keyframe will be optimized later in a local bundle adjustment procedure. In the local bundle adjustment optimization, 3D points and camera poses are refined simultaneously through the sequence. Similar to~\cite{Mouragnon09ivc} we use a sliding window approach reducing the computational cost, optimizing only the last $n$ keyframes at each stage, accounting for the 2D reprojections in the last $N$ keyframes. Typical values for $\left(N,n\right)$ are $\left(10,3\right)$ respectively.
 
 While adding a new feature to the map, we also store its associated appearance descriptor and 3D point location. Then, we try to match the feature descriptor against the detected new 2D features
 on a new keyframe by matching their associated descriptors in a high probability search area. In this way, we can create for a map element, \textit{feature tracks} that contain the information of the 2D
@@ -43,7 +43,7 @@ the mean re-projection error per frame in the 3D reconstruction is higher than a
 \subsection{Vision-Based Localization with Visibility Prediction}\label{sec:vision_localization}
 Once we have computed a 3D map of the environment by means of the described visual SLAM technique, we can use that map for fast and robust localization. In this context we employ the visibility prediction technique described in~\cite{Alcantarilla11icra} to perform an efficient data association between known 3D points and detected 2D features. This technique has been proved successfully for monocular vision-based localization in office-like environments in~\cite{Alcantarilla10icra}.
 
-Firstly, given a prior 3D reconstruction an off-line learning phase takes place to perform the visibility learning, exploting all the geometric relations between the camera poses and 3D points involved in the reconstruction. Then, the learnt visibilities can be used efficiently in a vision-based localization framework. Now, we will explain how to learn the visibilities and the localization framework.
+First, given a prior 3D reconstruction, an off-line learning phase takes place to perform the visibility learning, exploiting all the geometric relations between the camera poses and 3D points involved in the reconstruction. Then, the learnt visibilities can be used efficiently in a vision-based localization framework. Now, we will explain how to learn the visibilities and the localization framework.
 
 \subsubsection{Visibility Learning}\label{sec:visibility}
 In the visibility prediction problem, we are interested in the posterior distribution of the visibility $v_{j}$ for a certain 3D point $x_{j}$ given the query camera pose $\theta$, denoted as $P(v_{j} \vert \theta)$. In~\cite{Alcantarilla11icra}, the authors describe how the visibility of known 3D points can be approximated by using a form of lazy and memory-based learning technique known as \textit{Locally Weighted Learning}~\cite{Atkeson97ai}. This technique is a simple memory-based classification algorithm and can be implemented very efficiently. The idea is very simple: given the training data that
@@ -70,7 +70,7 @@ Finally, the expression of the kernel function that measures the similarity betw
  k_{ij} \equiv k(\vec{\theta}_i,\vec{\theta}_j) =\exp\left(-\left\| \mathbf{A}(\vec{\theta}_i-\vec{\theta}_j)\right\|_{2}\right)
 \end{equation}
 %
-where $\mathbf{A}$ is a $n \times n$ matrix, being $n$ the number of cues used in the proposed metric. In this work, each camera pose is parametrized by means of a vector $\vec{\theta}_i = \left\{T_{i},R_{i}\right\}$ (3D vector for the translation and 4D unit quaternion for the rotation). For simplicity, we just use two cues in the proposed metric: difference in camera translation and dot product
+where $\mathbf{A}$ is a $n \times n$ matrix, $n$ being the number of cues used in the proposed metric. In this work, each camera pose is parametrized by means of a vector $\vec{\theta}_i = \left\{T_{i},R_{i}\right\}$ (3D vector for the translation and 4D unit quaternion for the rotation). For simplicity, we just use two cues in the proposed metric: difference in camera translation and dot product
 between cameras viewing directions vectors, capturing efficiently the differences between camera poses due to changes in translation and orientation.
 
 As explained in~\cite{Alcantarilla11icra}, the visibility posterior can be approximated by just considering the K Nearest Neighbors (KNNs) of the current query pose $\theta_{t}$. As a consequence, once we find the KNNs of the current query pose, we only need to predict the visibilities for the subset of map elements which are at least seen once by these KNNs. Then, we can set the visibilities to be zero for
@@ -83,7 +83,7 @@ P(v_{j}=1|\theta) \approx \frac{\sum\limits_{i=1}^{K}k(\theta,\theta_{i}^{v_{j}=
 where only the nearest $K$ samples of the query pose $\Theta^{K}=\left\{\theta_{1} \ldots \theta_{k}\right\}$ are considered.
 
 \subsubsection{Vision-Based Localization Algorithm with Visibility Prediction}\label{sec:vision_algorithm}
-Our localization framework is composed of two different modules: initialization and a combination between vision-based localization with visibility prediction and stereo visual odometry. 
+Our localization framework is composed of two different modules: initialization and a combination of vision-based localization with visibility prediction and stereo visual odometry. 
 
 i. \textit{Initialization~(Re-Localization)}: At this stage, the robot is lost and can be located in any area of the map. Therefore, we need to find an initial camera pose to start the vision-based localization algorithm. For this purpose, we compute the appearance descriptors of the detected 2D features in the new image and match this set of descriptors against the set of descriptors from the list of stored keyframes from the prior 3D reconstruction. In the matching process between the camera frame and the list of keyframes, we perform a RANSAC procedure forcing epipolar geometry constraints. We recover the camera pose from the stored keyframe that obtains the highest ratio of inliers. If this ratio is lower than a certain threshold, we do not initialize the localization algorithm until the robot moves into a known area yielding a higher ratio.
 
@@ -92,9 +92,9 @@ following steps:
 %
 \begin{enumerate}
 \item While the robot is moving, the stereo pair acquires a new set of images which are rectified by using pre-computed Look Up Tables~(LUTs). Then, from the rectified images, a disparity map is computed.
-\item A set of image features $Z_{t}=\{z_{t,1} \ldots z_{t,n}\}$ are detected by Harris corner detector only in the left image. Then, a feature descriptor is computed for each of the detected features.
+\item A set of image features $Z_{t}=\{z_{t,1} \ldots z_{t,n}\}$ is detected by Harris corner detector only in the left image. Then, a feature descriptor is computed for each of the detected features.
 \item Then, by using the visibility prediction algorithm, a promising subset of highly visible 3D map points is chosen and re-projected onto the image plane based on the estimated previous camera pose $\theta_{t-1}$ and known camera parameters.
-\item Afterwards, a set of putative matches $C_{t}$ are formed where the i-th putative match $C_{t,i}$ is a pair $\{z_{t,k},x_{j}\}$ which comprises of a detected feature $z_{k}$ and a map element $x_{j}$. A putative match is created when the Euclidean distance between the appearance descriptors of a detected feature and a re-projected map element is lower than a certain threshold.
+\item Afterwards, a set of putative matches $C_{t}$ is formed where the i-th putative match $C_{t,i}$ is a pair $\{z_{t,k},x_{j}\}$ which comprises a detected feature $z_{k}$ and a map element $x_{j}$. A putative match is created when the Euclidean distance between the appearance descriptors of a detected feature and a re-projected map element is lower than a certain threshold.
 \item Finally, we solve the pose estimation problem minimizing the following cost error function, given the set of putative matches $C_{t}$:
 %
 \begin{equation} \label{eq:pose_estimation}
