--- a/src/xp_results.tex
+++ b/src/xp_results.tex
@@ -65,7 +65,7 @@ centimeter.
 
 \begin{figure}[ht!]
   \begin{center}
-    FIXME
+    \includegraphics[width=\linewidth]{data/mocap.png}
   \end{center}
   \caption{Camera position estimated by both the motion capture system
     and the localization algorithm. \label{tab:mocap_comparison}}
